<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_toolbar"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/action_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home"
        app:srcCompat="@drawable/ic_home"
        android:padding="@dimen/toolbarPadding"
        android:layout_alignParentTop="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/action_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:srcCompat="@drawable/ic_arrow"
        android:padding="@dimen/toolbarPadding"
        android:layout_below="@id/action_home"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/action_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/information"
        app:srcCompat="@drawable/ic_info"
        android:padding="@dimen/toolbarPadding"
        android:layout_alignParentBottom="true"
        android:visibility="invisible" />

</RelativeLayout>